bug fix in lab2

--- a/lesson4/lab2_recipe_category_prediction.ipynb
+++ b/lesson4/lab2_recipe_category_prediction.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with codecs.open('../data/edimdoma_dataset.csv', 'r') as f:\n",
+    "with codecs.open('../../data/edimdoma_dataset.csv', 'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "\n",
     "    names = []\n",
@@ -108,6 +108,7 @@
     "    reader.next()\n",
     "    for line in reader:\n",
     "        doc = line[2]\n",
+    "        recipe_info = json.loads(doc)\n",
     "\n",
     "        cookTime = -1\n",
     "        if 'cookTime' in recipe_info:\n",
@@ -118,7 +119,7 @@
     "                cookTime = cookTime[:-1]\n",
     "            if cookTime.isdigit():\n",
     "                cookTime = int(cookTime)\n",
-    "        recipe_info = json.loads(doc)\n",
+    "                \n",
     "        if not 'recipeCategory' in recipe_info:\n",
     "            continue\n",
     "        category = recipe_info['recipeCategory'].strip() if 'recipeCategory' in recipe_info else 'NONE'\n",
