--- a/lab4_ner_system_mixed.ipynb
+++ b/lab4_ner_system_mixed.ipynb
@@ -56,6 +56,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.layers import Layer\n",
+    "from keras.layers import concatenate\n",
+    "import keras.backend as K\n",
+    "\n",
+    "class MergeDimsLayer(Layer):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super(MergeDimsLayer, self).__init__(**kwargs)\n",
+    "\n",
+    "    def call(self, x, mask=None):\n",
+    "        x_shape = K.shape(x)\n",
+    "        return K.reshape(x, shape=(-1, x_shape[-2], x_shape[-1]))\n",
+    "\n",
+    "    def compute_output_shape(self, input_shape):\n",
+    "        return (None, input_shape[-2], input_shape[-1])\n",
+    "\n",
+    "\n",
+    "class RevertMergeDimsLayer(Layer):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super(RevertMergeDimsLayer, self).__init__(**kwargs)\n",
+    "\n",
+    "    def call(self, inputs, mask=None):\n",
+    "        x = inputs[0]\n",
+    "        word_count = K.shape(inputs[1])[1]\n",
+    "        return K.reshape(x, shape=[-1, word_count, K.shape(x)[-1]])\n",
+    "\n",
+    "    def compute_output_shape(self, input_shape):\n",
+    "        x_shape = input_shape[0]\n",
+    "        return (None, None, x_shape[-1])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,9 +188,6 @@
     "all_chars = sorted(set(text))\n",
     "char2id = {x:index+1 for index, x in enumerate(all_chars)}\n",
     "\n",
-    "def getCharId(ch):\n",
-    "    return 0 if not ch in char2id else char2id[ch]\n",
-    "\n",
     "input_words = Input(shape=(None,), name='input_words')\n",
     "out_words = Embedding(input_dim=len(word2id)+1, output_dim=200)(input_words)\n",
     "out_words = Bidirectional(LSTM(200, activation='relu', return_sequences=True))(out_words)\n",
@@ -180,42 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.layers import Layer\n",
-    "from keras.layers import concatenate\n",
-    "import keras.backend as K\n",
+    "def getCharId(ch):\n",
+    "    return 0 if not ch in char2id else char2id[ch]\n",
     "\n",
-    "class MergeDimsLayer(Layer):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(MergeDimsLayer, self).__init__(**kwargs)\n",
-    "\n",
-    "    def call(self, x, mask=None):\n",
-    "        x_shape = K.shape(x)\n",
-    "        return K.reshape(x, shape=(-1, x_shape[-2], x_shape[-1]))\n",
-    "\n",
-    "    def compute_output_shape(self, input_shape):\n",
-    "        return (None, input_shape[-2], input_shape[-1])\n",
-    "\n",
-    "\n",
-    "class RevertMergeDimsLayer(Layer):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(RevertMergeDimsLayer, self).__init__(**kwargs)\n",
-    "\n",
-    "    def call(self, inputs, mask=None):\n",
-    "        x = inputs[0]\n",
-    "        word_count = K.shape(inputs[1])[1]\n",
-    "        return K.reshape(x, shape=[-1, word_count, K.shape(x)[-1]])\n",
-    "\n",
-    "    def compute_output_shape(self, input_shape):\n",
-    "        x_shape = input_shape[0]\n",
-    "        return (None, None, x_shape[-1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def getWordId(w):\n",
     "    return 0 if not w in word2id else word2id[w]\n",
     "\n",
@@ -315,8 +315,8 @@
    "source": [
     "# Home task\n",
     "\n",
-    "- 6 points: Finish and tune the model, compare with previous one. Which one is better? \n",
-    "- 4 points: Compare your model with spacy (https://spacy.io/)"
+    "- 3 points: Finish and tune the model, compare with previous one. Which one is better? Why?\n",
+    "- 7 points: Compare your model with spacy (https://spacy.io/)"
    ]
   },
   {
